--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item android:height="640dp" android:drawable="@drawable/gradient" />
 
     <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <item>
         <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:gravity="bottom"
+            android:src="@drawable/mv_chara" />
+    </item>
+    <item android:top="100dp">
+        <bitmap
+            android:gravity="top"
+            android:src="@drawable/main_logo" />
+    </item>
 </layer-list>
